# meson-dependency-test

./: .gitignore  README.md  test.py
modules/circle/: meson.build
modules/circle/include/: circle.hpp
modules/rectangle/: meson.build
modules/rectangle/include/: rectangle.hpp
modules/rectangle/subprojects/: shape.wrap
modules/shape/: meson.build
modules/shape/include/: shape.hpp
modules/square/: meson.build
modules/square/include/: square.hpp
modules/square/subprojects/: rectangle.wrap
test/: meson.build
test/nested-subprojects/: README.md
test/nested-subprojects/01/: meson.build
test/nested-subprojects/01/test/: meson.build  shape.test.cpp
test/nested-subprojects/02/test/: meson.build  square.test.cpp
test/nested-subprojects/03/: meson.build
test/nested-subprojects/03/subprojects/: circle.wrap
test/nested-subprojects/03/test/: circle.test.cpp  meson.build
test/subprojects/: square.wrap
wraps/: rectangle.wrap  shape.wrap  square.wrap
